# studious-guacamole

install/: .rosinstall  _setup_util.py  setup.sh
install/include/marker_publisher/: Marker.h  MarkerArray.h
install/include/ueye_cam/: UEyeCamConfig.h
install/share/common-lisp/ros/marker_publisher/msg/: Marker.lisp  MarkerArray.lisp  _package.lisp  _package_Marker.lisp  _package_MarkerArray.lisp  marker_publisher-msg.asd
install/share/gennodejs/ros/marker_publisher/msg/: Marker.js  MarkerArray.js
install/share/marker_publisher/cmake/: marker_publisher-msg-extras.cmake  marker_publisher-msg-paths.cmake  marker_publisherConfig.cmake
install/share/mtracker_controller/: package.xml
install/share/mtracker_controller/cmake/: mtracker_controllerConfig.cmake
install/share/roseus/ros/marker_publisher/: manifest.l
install/share/roseus/ros/marker_publisher/msg/: Marker.l  MarkerArray.l
install/share/ueye_cam/cmake/: ueye_camConfig.cmake
install/share/ueye_cam/launch/: bayer_rggb_image_proc.launch
src/marker_publisher-master/include/marker_publisher/: marker_pub.h
src/marker_publisher-master/launch/: camera_marker_detection.launch
src/marker_publisher-master/src/: marker_pub.cpp
src/matjack package/: CMakeLists.txt  README.md  package.xml
src/matjack package/include/majack_tutorial/: pushup_maker.h
src/matjack package/launch/: pubsub.launch  turtle_tests.launch
src/matjack package/src/: hello_world.cpp  publisher.cpp  pushup_maker.cpp  subscriber.cpp  turtle_controller.cpp
src/mtracker_controller/: CMakeLists.txt  package.xml
src/mtracker_controller/config/: intrinsics.yaml
src/mtracker_controller/include/: serial.h
src/mtracker_controller/launch/: .camera_marker_detection.launch.swp  camera_marker_detection.launch  camera_tests.launch
src/mtracker_controller/src/: mtracker.cpp
src/ueye_cam/src/: image_test.cpp  ueye_cam_nodelet.cpp
src/ueye_test/: CMakeLists.txt  package.xml
src/ueye_test/launch/: camera_marker_detection.launch  camera_tests.launch
src/ueye_test/src/: MTrackerDriver.cpp  image_test.cpp
