<?xml version="1.0"?>
<package>
  <name>majack_tutorial</name>
  <version>0.0.0</version>
  <description>The majack_tutorial package</description>
  <maintainer email="ksis@todo.todo">ksis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
