<?xml version="1.0"?>
<package>
  <name>ueye_test</name>
  <version>0.0.1</version>
  <description>The ueye_test package used for recognizing markers</description>
  <maintainer email="mateusz.wagner@student.put.poznan.pl">Mateusz Wagner</maintainer>
  <maintainer email="erf_sh@yahoo.com">Erfan Sholehkhah</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ueye_cam</url> -->

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ueye_cam</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>marker_publisher</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ueye_cam</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>marker_publisher</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
